--- a/templates/sell.html
+++ b/templates/sell.html
@@ -14,7 +14,7 @@
             <textarea class="form-control" id="description" name="description" rows="3" placeholder="Describe your product" required></textarea>
         </div>
         <div class="mb-3">
-            <label for="price" class="form-label">Price (in USD)</label>
+            <label for="price" class="form-label">Price</label>
             <input type="number" class="form-control" id="price" name="price" placeholder="Set a price" min="0" step="0.01" required>
         </div>
         <div class="mb-3">
