--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body class="bg-success bg-opacity-10">
 
     <!-- DARK GREEN NAVBAR -->
-    <nav class="navbar navbar-expand-lg px-4" style="background-color: #07a832;">
+    <nav class="navbar navbar-expand-lg px-4" style="background-color: #0c6724;">
         <div class="container-fluid">
             <a class="navbar-brand text-white fw-bold" href="{{ url_for('index') }}">EcoFinds</a>
 
@@ -28,9 +28,7 @@
                 <li class="nav-item">
                     <a href="{{ url_for('login') }}" class="btn btn-outline-light">Login</a>
                 </li>
-                <li class="nav-item">
-                    <button class="btn btn-info fw-bold">+ SELL</button>
-                </li>
+
             </ul>
         </div>
     </nav>
