--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,9 @@
             <a href="{{ url_for('sell') }}" class="btn btn-success btn-lg px-5">
                 💰 Sell a Product
             </a>
+            <a href="{{ url_for('view_cart') }}" class="btn btn-primary btn-lg px-5">
+                🛒 My Cart
+            </a>
         </div>
     </div>
 
