--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,9 @@
             <a class="navbar-brand text-white fw-bold" href="{{ url_for('index') }}">EcoFinds</a>
 
             <!-- Search -->
-            <form class="d-flex flex-grow-1 mx-3" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search items..." aria-label="Search">
+            <form class="d-flex" action="{{ url_for('search') }}" method="GET">
+                <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
             <!-- Right links -->
