--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,6 +12,9 @@
     <!-- Sell button as a centered block above all cards -->
     <div class="row mt-4 mb-5">
         <div class="col text-center">
+            <a href="{{ url_for('edit_profile') }}" class="btn btn-secondary btn-lg px-5">
+                📝 Edit Profile
+            </a>
             <a href="{{ url_for('sell') }}" class="btn btn-success btn-lg px-5">
                 💰 Sell a Product
             </a>
@@ -24,6 +27,7 @@
     <div class="row justify-content-center">
         <!-- Show existing products in the db -->
         {% for product in products %}
+        <h3 class="text-center mb-4">My Products</h3>
         <div class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm">
                 <img 
