--- a/templates/cart.html
+++ b/templates/cart.html
@@ -30,7 +30,7 @@
             <div class="col text-center">
                 <h3>Your cart is empty!</h3>
                 <p>Add some products to your cart to see them here.</p>
-                <a href="{{ url_for('index') }}" class="btn btn-primary">Browse Products</a>
+                <a href="{{ url_for('profile') }}" class="btn btn-primary">Browse Products</a>
             </div>
         {% endif %}
     </div>
